Legger til info om java parameter for sbt.